--- a/_toc.yml
+++ b/_toc.yml
@@ -10,3 +10,5 @@ parts:
   - file: Cviceni01vyplnene
   - file: Cviceni02vyplnene
   - file: Cviceni03vyplnene
+  - file: Cviceni04vyplnene
+  - file: Cviceni05
