--- a/_toc.yml
+++ b/_toc.yml
@@ -11,4 +11,4 @@ parts:
   - file: Cviceni02vyplnene
   - file: Cviceni03vyplnene
   - file: Cviceni04vyplnene
-  - file: Cviceni05
+  - file: Cviceni05vyplnene
