--- a/_toc.yml
+++ b/_toc.yml
@@ -12,4 +12,4 @@ parts:
   - file: Cviceni03vyplnene
   - file: Cviceni04vyplnene
   - file: Cviceni05vyplnene
-  - file: Cviceni06
+  - file: Cviceni06vyplnene
