--- a/_toc.yml
+++ b/_toc.yml
@@ -13,4 +13,5 @@ parts:
   - file: Cviceni04vyplnene
   - file: Cviceni05vyplnene
   - file: Cviceni06vyplnene
-  - file: Cviceni07
+  - file: Cviceni07vyplnene
+  - file: Cviceni08
