--- a/_toc.yml
+++ b/_toc.yml
@@ -14,4 +14,5 @@ parts:
   - file: Cviceni05vyplnene
   - file: Cviceni06vyplnene
   - file: Cviceni07vyplnene
-  - file: Cviceni08
+  - file: Cviceni08vyplnene
+  - file: Cviceni09
