--- a/_toc.yml
+++ b/_toc.yml
@@ -15,4 +15,5 @@ parts:
   - file: Cviceni06vyplnene
   - file: Cviceni07vyplnene
   - file: Cviceni08vyplnene
-  - file: Cviceni09
+  - file: Cviceni09vyplnene
+  - file: Cviceni10
