--- a/_toc.yml
+++ b/_toc.yml
@@ -16,4 +16,4 @@ parts:
   - file: Cviceni07vyplnene
   - file: Cviceni08vyplnene
   - file: Cviceni09vyplnene
-  - file: Cviceni10
+  - file: Cviceni10vyplnene
