--- a/_toc.yml
+++ b/_toc.yml
@@ -8,3 +8,13 @@ parts:
   numbered: true
   chapters:
   - file: Cviceni01
+  - file: Cviceni02
+  - file: Cviceni03
+  - file: Cviceni04
+  - file: Cviceni05
+  - file: Cviceni06
+  - file: Cviceni07
+  - file: Cviceni08
+  - file: Cviceni09
+  - file: Cviceni10
+  - file: Cviceni11
