--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/m-jirka/nme_cv  # Online location of your book
+  url: https://github.com/mjirka/nme  # Online location of your book
 #  path_to_book: docs  # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
@@ -34,7 +34,7 @@ repository:
   
 launch_buttons:
   jupyterhub_url: "https://jupyter.fjfi.cvut.cz"
-  notebook_interface: "jupyterlab"   # or "classic"
+#  notebook_interface: "jupyterlab"   # or "classic"
 #  binderhub_url: "https://jupyter.fjfi.cvut.cz/"  # The URL for your BinderHub (e.g., https://mybinder.org)
 #  thebe                  : true
   
